nuevos monstruos y equipamiento

--- a/juego2.css
+++ b/juego2.css
@@ -158,10 +158,41 @@ button:disabled {
   color: #e74c3c;
   margin-top: 0;
 }
+
 .selected {
   background-color: #16a085;
   color: white;
 }
+
+/* Estilos para Brazaletes y Pociones */
+.bracelet {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.bracelet button {
+  background-color: #e67e22;
+}
+
+.bracelet button:hover {
+  background-color: #d35400;
+}
+
+.potion {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.potion button {
+  background-color: #8e44ad;
+}
+
+.potion button:hover {
+  background-color: #6c3483;
+}
+
 
 
 
